# edu_converter

./: README.md  pyproject.toml  requirements.txt
edu_converter/: main.py
edu_converter/src/: csv_functions.py  functions.py  json_functions.py  my_args.py  xml_functions.py
